compiler/e2e/test/snapshot/module_tree/not_found/snapshot.snap
---
source: compiler/e2e/test/snapshot/mod.rs
expression: clean_run
---
stderr:
error: failed to load the source file for the submodule
  ╭─ module_tree/not_found/main.pnx:1:15
  │
1 │ public module notFound
  │               ^^^^^^^^
  │
  = failed to load the source file for the submodule at `module_tree/not_found/notFound.pnx`: general IO error (os error 2)

error: Compilation aborted due to 1 error(s)



stdout:
